fixed the issue where headings where not showing up on the leaderboard pdf

--- a/src/Leaderboard.css
+++ b/src/Leaderboard.css
@@ -36,6 +36,7 @@
   .leaderboard-heading {
     display: flex;
     width: 100%;
+    text-shadow: 1px 1px 0 #000, -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000;
     justify-content: space-between; /* Distribute headings evenly */
     margin-bottom: 10px; /* Add spacing between headings and tiles */
   }
@@ -45,6 +46,9 @@
   .mistakes-heading {
     font-weight: bold;
     font-size: 16px; /* Adjust heading font size if needed */
+  }
+  .mistakes-heading {
+    margin-right: 25px;
   }
   
   .rank-heading,
